--- a/client/media/styles.css
+++ b/client/media/styles.css
@@ -141,6 +141,7 @@ body{
     background-color: #fff;
     height: 1.5rem;
     margin-bottom: 0.5rem;
+    margin: auto;
 }
 
 .search-form input{
@@ -536,6 +537,52 @@ p{
 
 #button-checkout{
     z-index: 10;
+}
+
+section{
+    background-color: rgb(255, 255, 255);
+}
+
+.oferta{
+    width: 60%;
+    margin: auto;
+    margin-left: 15%;
+}
+
+.row{
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    color: #000000;
+    margin: auto;
+}
+
+.oferta-exclusiva{
+    margin-left: -55%;
+    color: #0c0b2e;
+    font-size: 2rem;
+    font-weight: 400;
+}
+
+.titulo-oferta {
+    font-family: "Moderustic", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 800;
+    color: #000000;
+    padding-left: 4%;
+}
+
+.col-2{
+    margin-left: -10%;
+    display: flex;
+    color: #000000;
+    flex-direction: column;
+}
+
+.p-oferta{
+    color: #000000;
 }
 
 hr { 
