--- a/client/media/styles.css
+++ b/client/media/styles.css
@@ -520,7 +520,7 @@ p{
     margin-left: 5px;
     margin-right: 5px;
     }
-}
+} /*media only screen and (max-width: 500px)*/
 
 .price {
     font-size: 20px;
@@ -569,10 +569,10 @@ p{
 
 section{
     background-color: rgb(255, 255, 255);
+
 }
 
 .oferta{
-    width: 60%;
     margin: auto;
     margin-left: 15%;
 }
@@ -585,6 +585,7 @@ section{
     align-content: center;
     color: #000000;
     margin: auto;
+    margin-left: -25%;
 }
 
 .oferta-exclusiva{
@@ -602,8 +603,10 @@ section{
     padding-left: 4%;
 }
 
+
 .col-2{
-    margin-left: -10%;
+    
+    margin-left: -5%;
     display: flex;
     color: #000000;
     flex-direction: column;
@@ -685,104 +688,6 @@ p {
     width: 28px;
     margin-left: 20px;
 }
-
-/* @media only screen and (max-width: 800px) {
-
-    
-    .container-hero{
-        display: flex;
-        flex-direction: column;
-        background-color: #f5f4f2;
-        align-items: center;
-    }
-
-    .hero{
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
-        width: max-content;
-        
-    }
-    
-    .container-navbar {
-        display: flex;
-        flex-direction:column ;
-        scroll-padding: inherit;
-    }
-
-    .navbar-content{
-        display: flex;
-        flex-direction:column ;
-        width: max-content;
-        
-    }
-    
-.search-form{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 10px solid #fff;
-    border-radius: 20px;
-    background-color: #fff;
-    height: 1rem;
-    margin-bottom: 0.5rem;
-    /* margin-left: -40%; */
-/* }
-
-.search-form input{
-    outline: none;
-    font-family: inherit;
-    border: none;
-    width: 15rem;
-    font-size: 1.1rem;
-    color: #777;
-    cursor: pointer;
-    overflow: hidden;
-    
-} */
-
-/* .search-form input::-webkit-search-cancel-button{
-    appearance: none;
-}
-
-.search-form .btn-search{
-    border: none;
-    background-color: #0062cc;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    padding: 1rem;
-    border-radius: 10px;
-} */
-
-
-    /* .menu { 
-        position: absolute;
-        top: 14rem;
-        display: block;
-        background-color: #0000b1;
-        width: 60%;
-        
-        
-    } */
- /* continuar con el responsive */
-    /* .menu li {
-        display: block;
-        margin-right: 40px;
-        margin-top: 80px;
-        margin-bottom: 10px;
-        color: #ccbbbb;
-        
-    } 
-    #menu-icon{
-        display: block;
-    } */
-
-    
-
-
- 
 
 
 #nuevos-productos{
@@ -887,7 +792,7 @@ p {
             RESPONSIVE            
     ****************************** */
 
-@media only screen and (max-width: 768px) { 
+@media only screen and (max-width: 768px) {    /*700px aprox*/
     html{
         font-size: 55%;
     }
@@ -1014,6 +919,88 @@ p {
         font-size: 2rem;
     }
 
+    .oferta{
+        width: 30%;
+        margin: 0;
+        margin-left: 15%;
+
+    }
+
+    .row{
+        background-color: #ffffff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        color: #000000;
+        margin: 0;
+    }
+    
+    .oferta-exclusiva{
+        color: #0c0b2e;
+        font-size: 3.5rem;
+        font-weight: 400;
+        margin-left: -1%;
+    }
+    
+    .titulo-oferta {
+        font-family: "Moderustic", sans-serif;
+        font-size: 3rem;
+        font-weight: 800;
+        color: #000000;
+        width: 200%;
+        text-align: justify;
+        margin-left: -50%;
+    }
+    
+
+
+
+    .col-2{
+        width: 50%;
+        margin-left: -50%;
+        display: flex;
+        color: #000000;
+        flex-direction: column;
+    }
+    
+    .p-oferta{
+        color: #000000;
+        font-size: small;
+        text-align: justify;
+        line-height: 1.8; 
+        width: 200%;
+        margin-left: -50%;
+        
+    }
+
+    .footer-links{
+        display: block;
+        block-size: 50%;
+        margin: auto;
+        font-size: smaller
+    
+    }
+
+    .link{
+        width: 100%;
+        margin: auto;
+        padding: 0;
+        gap: 1.5rem;
+        justify-content: center;
+        justify-items: center;
+        align-items: center;
+        align-content: center;
+    }
+
+    #nro-telefono{
+        font-size: medium;
+    }
+
+    #copyright{
+        margin-top: 0;
+    }
+    
 
 } /*@media only screen and (max-width: 768px)*/
 
@@ -1022,7 +1009,7 @@ p {
 
 
 
-@media only screen and (max-width: 468px) {
+@media only screen and (max-width: 468px) {    /*380px aprox*/
 
     .container-logo{
         text-align: center;
@@ -1120,7 +1107,84 @@ p {
         width: 60%;
     }
 
+    .offer{
+        width: 50%;
+    }
 
+    .oferta{
+        display: none;
+        margin: 0;
+        margin-left: 15%;
+
+    }
+
+    .row{
+
+        background-color: #ffffff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        color: #000000;
+        margin: 0;
+    }
+    
+    .oferta-exclusiva{
+
+        color: #0c0b2e;
+        font-size: 3.5rem;
+        font-weight: 400;
+        margin-left: -1%;
+    }
+    
+    .titulo-oferta {
+
+        font-family: "Moderustic", sans-serif;
+        font-size: 3rem;
+        font-weight: 800;
+        color: #000000;
+        width: 200%;
+        text-align: justify;
+        margin-left: -50%;
+    }
+    
+
+
+    .col-2{
+
+        margin-left: -50%;
+        display: flex;
+        color: #000000;
+        flex-direction: column;
+    }
+    
+    .p-oferta{
+        color: #000000;
+        font-size: small;
+        text-align: justify;
+        line-height: 1.8; 
+        width: 200%;
+        margin-left: -50%;
+        
+    }
+    
+    .footer {
+        flex-direction: column; 
+        padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    }
+    
+    .footer-links {
+        width: 100%; 
+        margin-bottom: 10px; 
+    }
+
+    #nro-telefono {
+        font-size: 14px; 
+        text-align: center; 
+    }
 
  } /*cierra media only screen and (max-width: 468px) */
 
